[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defendable-api-fly-tigris"
version = "0.1.0"
description = "DefendableOS API · Fly.io + Tigris object storage · Postgres swarm-and-bee · ledger ingestion + retrieval"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mr. Defendable", email = "ops@mrdefendable.com" }]
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "boto3>=1.34,<2.0",
    "botocore>=1.34,<2.0",
    "orjson>=3.10,<4.0",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
